alteracao no gitignore para receber os arquivos do asterisk

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,99 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Arquivos Asterisk
+acl.conf
+cdr_odbc.conf
+config_test.conf
+http.conf
+say.conf
+adsi.conf
+cdr_pgsql.conf
+console.conf
+iax.conf
+sla.conf
+aeap.conf
+cdr_sqlite3_custom.conf
+dbsep.conf
+iaxprov.conf
+agents.conf
+cdr_tds.conf
+dnsmgr.conf
+indications.conf
+res_config_mysql.conf
+sorcery.conf
+alarmreceiver.conf
+cel_beanstalkd.conf
+dsp.conf
+logger.conf
+res_config_odbc.conf
+ss7.timers
+amd.conf
+cel.conf
+dundi.conf
+manager.conf
+res_config_sqlite3.conf
+stasis.conf
+app_skel.conf
+cel_custom.conf
+enum.conf
+meetme.conf
+res_corosync.conf
+statsd.conf
+ari.conf
+cel_odbc.conf
+extconfig.conf
+minivm.conf
+res_curl.conf
+stir_shaken.conf
+ast_debug_tools.conf
+cel_pgsql.conf
+extensions.aelmodules.conf
+res_fax.conf
+telcordia-1.adsi
+asterisk.adsicel_sqlite3_custom.conf
+motif.conf
+res_http_media_cache.conf
+test_sorcery.conf
+cel_tds.conf
+extensions.luamusiconhold.conf
+res_ldap.conf
+udptl.conf
+calendar.conf
+chan_dahdi.conf
+extensions_minivm.conf
+ooh323.conf
+res_odbc.conf
+unistim.conf
+ccss.conf
+chan_mobile.conf
+phoneprov.conf
+resolver_unbound.conf
+users.conf
+cdr_adaptive_odbc.conf
+cli_aliases.conf
+festival.conf
+pjproject.conf
+res_parking.conf
+voicemail.conf
+cdr_beanstalkd.conf
+cli.conf
+followme.conf
+res_pgsql.conf
+xmpp.conf
+cdr.conf
+cli_permissions.conf
+func_odbc.conf
+pjsip_notify.conf
+res_snmp.conf
+cdr_custom.conf
+codecs.conf
+geolocation.conf
+pjsip_wizard.conf
+res_stun_monitor.conf
+cdr_manager.conf
+confbridge.conf
+hep.conf
+prometheus.conf
+rtp.conf
